# community.digitalocean

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.rst  CODEOWNERS  README.md  codecov.yml  galaxy.yml  pyproject.toml  testing.yml
.github/workflows/: ansible-test-coverage.yml  ansible-test-integration-module.yml  ansible-test-integration.yml  ansible-test-sanity.yml  ansible-test-unit.yml  ansible-test.yml  black.yml  dev-integration-module.yml  dev-integration.yml  psf-black.yml  pull-request-integration-ci.yml  pull-request-integration.yml
changelogs/: 124-add-mongodb.yaml  261-fix_deleting_by_id_only.yaml  changelog.yaml
changelogs/fragments/: 0.1.0.yml  100-fix-database-info.yaml  102-filters-prefixed-vars.yml  112-update-readme.yaml  114-fix-integration-tests.yaml  116-droplet-present-wait.yaml  121-integration-tests.yaml  13-fix-sanity-tests.yaml  131-floating-ip-tests.yaml  134-database-tests.yaml  134-psf-black.yaml  138-group-name-transformations.yaml  139-info-modules-check-mode.yaml  14-docs-fqcn.yaml  140-resize-state-active.yaml  143-droplet-resize-wait-active.yaml  147-load-balancer-fixes.yaml  149-block-detach-not-idempotent.yaml  150-droplet-active-power-on.yaml  157-doks-auto-scale.yaml  159-add-droplet-firewall.yaml  16-digitalocean-firewall.yaml  162-floating-ip-data-idempotency.yaml  163-documentation-broken-links.yaml  164-add-badges.yaml  165-serialize-integration-tests.yml  168-inventory-timeout.yaml  170-add-flip-states.yaml  171-add-project-support.yaml  (+91 more)
meta/: runtime.yml
scripts/: badges.sh
tests/: config.yml
(+343 files in other folders)
